装填枚数のI/Fを追加
